--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,11 @@ dependencies = [
     "langchain-chroma>=0.2.4",
     "langchain-ollama>=0.3.4",
     "langchain-openai>=0.3.28",
+    "logfire>=3.25.0",
     "mcp>=1.11.0",
     "more-itertools>=10.7.0",
     "pandas>=2.3.1",
+    "pydantic-ai>=0.4.4",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
     "supabase>=2.16.0",
