--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "pydantic-ai>=0.4.4",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
+    "streamlit>=1.47.0",
     "supabase>=2.16.0",
     "utils>=1.0.2",
 ]
